--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@notionhq/client": "^2.2.2",
     "dotenv": "^16.0.1",
     "ink": "^4.4.1",
-    "react": "^18.2.0"
+    "ink-spinner": "^5.0.0",
+    "react": "^18.2.0",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/node": "^18.0.3",
     "@types/react": "^18.2.36",
+    "@types/yargs": "^17.0.30",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
