--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "ink": "^4.4.1",
     "ink-spinner": "^5.0.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
