--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "",
   "dependencies": {
     "@notionhq/client": "^2.2.2",
+    "chalk": "^5.3.0",
     "dotenv": "^16.0.1",
     "ink": "^4.4.1",
     "ink-spinner": "^5.0.0",
