--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@notionhq/client": "^2.2.2",
     "chalk": "^5.3.0",
     "dotenv": "^16.0.1",
+    "enquirer": "^2.4.1",
     "ink": "^4.4.1",
     "ink-spinner": "^5.0.0",
     "react": "^18.2.0",
