--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": ["oclif", "oclif-typescript", "prettier"]
+  "extends": ["oclif", "oclif-typescript", "prettier"],
+  "rules": {
+    "camelcase": "off",
+    "perfectionist/sort-object-types": "off",
+    "perfectionist/sort-union-types": "off",
+    "perfectionist/sort-named-imports": "off",
+    "perfectionist/sort-imports": "off",
+    "unicorn/no-useless-promise-resolve-reject": "off",
+    "@typescript-eslint/ban-ts-comment": "off"
+  }
 }
