--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
     "notionsh": "./bin/run.js"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.13",
     "@oclif/core": "^3",
     "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^4"
+    "@oclif/plugin-plugins": "^4",
+    "listr": "^0.14.3",
+    "tslog": "^4.9.2"
   },
   "description": "A shell script manager built on Notion.",
   "devDependencies": {
     "@oclif/prettier-config": "^0.2.1",
     "@oclif/test": "^3",
     "@types/chai": "^4",
+    "@types/listr": "^0.14.8",
     "@types/mocha": "^10",
     "@types/node": "^18",
     "chai": "^4",
@@ -55,6 +59,7 @@
   },
   "repository": "kevinxh/notion-sh",
   "scripts": {
+    "start": "./bin/dev.js run",
     "build": "shx rm -rf dist && tsc -b",
     "lint": "eslint . --ext .ts",
     "postpack": "shx rm -f oclif.manifest.json",
