can run script now

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,12 @@
   "rules": {
     "camelcase": "off",
     "perfectionist/sort-object-types": "off",
+    "perfectionist/sort-objects": "off",
     "perfectionist/sort-union-types": "off",
     "perfectionist/sort-named-imports": "off",
     "perfectionist/sort-imports": "off",
     "unicorn/no-useless-promise-resolve-reject": "off",
+    "unicorn/prefer-module": "off",
     "@typescript-eslint/ban-ts-comment": "off"
   }
 }
