--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@oclif/core": "^3",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^4",
+    "enquirer": "^2.4.1",
     "listr": "^0.14.3",
     "tslog": "^4.9.2"
   },
