--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "homepage": "https://github.com/kevinxh/notion-sh",
   "license": "MIT",
   "main": "",
-  "name": "notionsh",
+  "name": "notion-sh",
   "oclif": {
     "bin": "notionsh",
     "dirname": "notionsh",
@@ -66,12 +66,12 @@
     "lint": "eslint . --ext .ts",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "npm run lint",
-    "prepack": "npm run build && oclif manifest && oclif readme",
+    "prepack": "npm run build && oclif manifest",
     "prepare": "npm run build",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
-  "version": "0.0.0",
+  "version": "0.0.1",
   "bugs": "https://github.com/kevinxh/notion-sh/issues",
   "keywords": [
     "oclif"
