--- a/package.json
+++ b/package.json
@@ -67,11 +67,12 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "npm run lint",
     "prepack": "npm run build && oclif manifest",
+    "docs": "oclif readme",
     "prepare": "npm run build",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "bugs": "https://github.com/kevinxh/notion-sh/issues",
   "keywords": [
     "oclif",
